update category & README.md

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <ul>
               <li>
                 <a
-                  data-href="international-exchange.html"
+                  data-href="acti-international-exchange.html"
                   data-title="国际交流"
                   href="javascript:void(0)"
                   >国际交流</a
@@ -327,7 +327,7 @@
               </li>
               <li>
                 <a
-                  data-href="hospital-activities.html"
+                  data-href="acti-hospital-activities.html"
                   data-title="医院活动"
                   href="javascript:void(0)"
                   >医院活动</a
@@ -335,7 +335,7 @@
               </li>
               <li>
                 <a
-                  data-href="exhibition-activities.html"
+                  data-href="acti-exhibition-activities.html"
                   data-title="展会活动"
                   href="javascript:void(0)"
                   >展会活动</a
@@ -355,7 +355,7 @@
             <ul>
               <li>
                 <a
-                  data-href="ceo-wishes.html"
+                  data-href="aboutus-ceo-wishes.html"
                   data-title="总裁寄语"
                   href="javascript:void(0)"
                   >总裁寄语</a
@@ -363,7 +363,7 @@
               </li>
               <li>
                 <a
-                  data-href="com-intro-his.html"
+                  data-href="aboutus-com-intro-his.html"
                   data-title="公司介绍&历史"
                   href="javascript:void(0)"
                   >公司介绍&历史</a
@@ -371,7 +371,7 @@
               </li>
               <li>
                 <a
-                  data-href="team-member.html"
+                  data-href="aboutus-team-member.html"
                   data-title="团队成员"
                   href="javascript:void(0)"
                   >团队成员</a
@@ -379,7 +379,7 @@
               </li>
               <li>
                 <a
-                  data-href="source-manage.html"
+                  data-href="aboutus-source-manage.html"
                   data-title="企业资源管理"
                   href="javascript:void(0)"
                   >企业资源管理</a
