更新产品部分修改页面

--- a/prod-products.html
+++ b/prod-products.html
@@ -75,6 +75,10 @@
                 imgUrl(base64Img)
               </th>
               <th>
+                相关资料
+              </th>
+
+              <th>
                 操作
               </th>
             </tr>
@@ -90,7 +94,10 @@
               医疗器具消毒所用，快速杀菌
             </td>
             <td>
-              flkdsafjoiwefljkl
+              http://superbed.com/fdsaoifwa
+            </td>
+            <td>
+              http://files/jlkdfsjoin/fw9aefn
             </td>
             <td>
               <div class="btn">
@@ -112,7 +119,10 @@
               仓库租赁
             </td>
             <td>
-              flkdsafjoiwefljkl
+              http://superbed.com/fdsaoifwa
+            </td>
+            <td>
+              http://files/jlkdfsjoin/fw9aefn
             </td>
             <td>
               <div class="btn">
