更新index.html中的产品映射

--- a/index.html
+++ b/index.html
@@ -220,42 +220,6 @@
             </ul>
           </dd>
         </dl>
-        <dl id="menu-product">
-          <dt>
-            <i class="Hui-iconfont">&#xe620;</i> 产品管理<i
-              class="Hui-iconfont menu_dropdown-arrow"
-              >&#xe6d5;</i
-            >
-          </dt>
-          <dd>
-            <ul>
-              <li>
-                <a
-                  data-href="product-brand.html"
-                  data-title="品牌管理"
-                  href="javascript:void(0)"
-                  >品牌管理</a
-                >
-              </li>
-              <li>
-                <a
-                  data-href="product-category.html"
-                  data-title="分类管理"
-                  href="javascript:void(0)"
-                  >分类管理</a
-                >
-              </li>
-              <li>
-                <a
-                  data-href="product-list.html"
-                  data-title="产品管理"
-                  href="javascript:void(0)"
-                  >产品管理</a
-                >
-              </li>
-            </ul>
-          </dd>
-        </dl>
         <dl id="menu-system">
           <dt>
             <i class="Hui-iconfont">&#xe62e;</i> 系统管理<i
@@ -303,6 +267,50 @@
                   data-title="系统日志"
                   href="javascript:void(0)"
                   >系统日志</a
+                >
+              </li>
+            </ul>
+          </dd>
+        </dl>
+        <dl id="menu-product">
+          <dt>
+            <i class="Hui-iconfont">&#xe620;</i> 产品管理<i
+              class="Hui-iconfont menu_dropdown-arrow"
+              >&#xe6d5;</i
+            >
+          </dt>
+          <dd>
+            <ul>
+              <li>
+                <a
+                  data-href="prod-department.html"
+                  data-title="科室管理"
+                  href="javascript:void(0)"
+                  >科室管理</a
+                >
+              </li>
+              <li>
+                <a
+                  data-href="prod-category.html"
+                  data-title="分类管理"
+                  href="javascript:void(0)"
+                  >分类管理</a
+                >
+              </li>
+              <li>
+                <a
+                  data-href="prod-products.html"
+                  data-title="产品管理"
+                  href="javascript:void(0)"
+                  >产品管理</a
+                >
+              </li>
+              <li>
+                <a
+                  data-href="prod-spulist.html"
+                  data-title="货品管理"
+                  href="javascript:void(0)"
+                  >货品管理</a
                 >
               </li>
             </ul>
